add respondive article

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,11 +56,15 @@
             padding-bottom: 1px;
         }
         .wrap-footer {
-            height: 913px;
+            height: 911px;
         }
         .footer_section_about {
             width: 100%;
-            margin: 0 auto;
+            margin: 0 0 30px 0;
+        }
+        .section_box p {
+            font-size: 11px;
+            line-height: 17px;
         }
         .footer_section_box {
             width: 77%;
@@ -80,9 +84,9 @@
             margin: 0 auto;
         }
         .footer_social {
+            width: 80%;
+            margin: 0 57px 10px 57px;
             float: none;
-            width: 95%;
-            margin: 0 auto;
         }
         .footer-info-left {
             float: left;
@@ -229,7 +233,10 @@
             width: 95%;
         }
         .wrap-footer {
-            height: 870px;
+            height: 941px;
+        }
+        .footer_info {
+           padding-top: 60px;
         }
         .footer_section_about {
             width: 100%;
@@ -313,7 +320,7 @@
             width: 85%;
         }
         .relation-post {
-            width: 100%;
+            width: 90%;
         }
         .post-comments {
             width: 100%;
@@ -500,7 +507,7 @@
             }
         }
 
-        @media all and (min-width: 480px) and (max-width: 768px) {
+        @media all and (min-width: 480px) and (max-width: 767px) {
             .rightpart {
                 float: none;
             }
@@ -535,7 +542,7 @@
                 float: none;
             }
         }
-        @media all and (min-width: 610px) and (max-width: 768px) {
+        @media all and (min-width: 610px) and (max-width: 767px) {
         .footer_section_active {
             float: none;
             width: 45%;
