--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
     background-color: #f1fdff;
 }
 .menu {
+    /*width: 1210px;*/
     z-index: 500;
     top: 15px;
     left: 100px;
@@ -38,6 +39,7 @@ body {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     background-color: white;
     height: 98px;
+    margin: 0 auto;
 }
 
 .menu ul li {
@@ -337,8 +339,9 @@ a:focus {
     width: 100%;
 }
 .proceed-count {
-    float: left;
-    width: 50%;
+    display: inline-block;
+    float: right;
+    width: 25%;
 }
 .proceed-count table {
     float: left;
@@ -366,9 +369,9 @@ a:focus {
     color: #555963;
 }
 .proceed-payment {
-    text-align: center;
+    text-align: right;
     float: right;
-    width: 50%;
+    width: 35%;
     box-sizing: border-box;
     margin-top: 30px;
 }
@@ -1373,8 +1376,9 @@ background-color: #f2fdff;;
     float: right;
 }
 .cart-wrap {
-    min-height: 400px;
-    margin-top: 230px;
+    margin: 0 auto;
+    max-width: 1140px;
+    padding-top: 230px;
 }
 .cart-wrap h1 {
     padding-bottom: 70px;
@@ -1417,7 +1421,7 @@ background-color: #f2fdff;;
     border: none;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
-    color: #959ba1;
+    color: #e0e0e0;
     outline: none;
 }
 .coupon-code input:focus{
@@ -1479,13 +1483,13 @@ background-color: #f2fdff;;
 }
 .proceed-wrap {
     float: right;
-    width: 45%;
+    width: 70%;
 }
 .count-form-inner {
-    margin-bottom: 80px;
-    margin-top: 85px;
-    width: 100%;
-}
+    margin: 0 auto;
+    max-width: 1140px;
+    padding: 80px 0;
+   }
 
 .proceed-checkbox {
     width: 100%;
@@ -1586,7 +1590,7 @@ background-color: #f2fdff;;
     margin-right: 60px;
 }
 .table-cart {
-    overflow-x: scroll;
+    /*overflow-x: scroll;*/
     /*width: 1140px;*/
     margin: 0 auto;
     width: 100%;
