--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,14 +9,13 @@
     }
     @media all and (min-width: 1190px) and (max-width: 1285px){
         .menu_list {
-            margin: 3% 1% 0 1%;
+            margin: 3% 0 0 0;
         }
     }
     @media all and (min-width: 320px) and (max-width: 1189px) {
         .menu_list {
             display: none;
         }
-
     }
 
 
@@ -228,7 +227,7 @@
 
 
     }
-    @media all and (min-width: 768px) and (max-width:992px) {
+    @media all and (min-width: 768px) and (max-width:991px) {
         .menu_futer {
             width: 95%;
         }
@@ -286,9 +285,9 @@
         .article-text {
             max-width: 95%;
         }
-        .proceed-wrap {
-            width: 40%;
-        }
+        /*.proceed-wrap {*/
+            /*width: 40%;*/
+        /*}*/
         .switch-blog {
             margin-left: 12%;
         }
@@ -434,6 +433,31 @@
         }
     }
     @media all and (min-width: 992px) and (max-width: 1189px){
+        .coupon-wrap {
+            width: 36%;
+            float: left;
+        }
+        .count-form-inner {
+            margin: 0 auto;
+            max-width: 80%;
+            padding: 80px 0;
+        }
+        .proceed-wrap {
+            float: right;
+            width: 64%;
+        }
+        .proceed-payment {
+            text-align: right;
+            float: right;
+            width: 37%;
+            display: inline-block;
+        }
+        .proceed-count {
+            display: inline-block;
+            float: right;
+            width: 44%;
+        }
+
         .footer_section_active {
             width: 41%;
         }
