--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,7 +17,22 @@
             display: none;
         }
     }
-
+    @media only screen and (max-width: 1310px) {
+        .container_wrap {
+            display: none;
+        }
+        .background_books {
+           margin-top: 150px;
+        }
+    }
+    @media only screen and (max-width: 992px) {
+        .slider-header-book {
+            display: none;
+        }
+        .presentation_books {
+            margin-top: 225px;
+        }
+    }
 
     /*========= end menu_list ===========*/
 
@@ -25,6 +40,19 @@
         /*======= article ============*/
 
     @media all and (min-width: 320px) and (max-width:767px) {
+        .count-form-inner {
+            width: 95%;
+            margin: 0 auto;
+            padding: 80px 0;
+        }
+        .coupon-wrap {
+            float: none;
+        }
+        .proceed-wrap {
+            padding-top: 110px;
+            float: none;
+            margin: 0 auto;
+        }
         .menu {
             width: 95%;
             left: 7px;
@@ -228,6 +256,89 @@
 
     }
     @media all and (min-width: 768px) and (max-width:991px) {
+        .presentation_book {
+            width: 90%;
+            float: none;
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+        ..presentation_text {
+            float: left;
+            width: 49%;
+            margin: 35px 10px 35px 35px;
+        }
+        .shopfrontmenu {
+            width: 95%;
+        }
+        .section_about_autor {
+            width: 35%;
+            float: left;
+        }
+        .section_photo_autor {
+            padding: 0 50px;
+            float: right;
+            width: 46%;
+        }
+        .block-literature {
+            width: 100%;
+        }
+        .img-literature {
+            float: left;
+            width: 50%;
+            padding-left: 10px;
+        }
+        .literature_news_autor {
+            margin-top: 1105px;
+            float: none;
+            width: 100%;
+        }
+        .block_news {
+            width: 36%;
+            display: inline-block;
+            padding: 0 50px 0 50px;
+            float: none;
+            vertical-align: top;
+        }
+        .text-literature {
+            float: left;
+            width: 46%;
+        }
+        .literature_news ul li {
+            width: 100%;
+        }
+        .section_book_autor {
+            position: relative;
+            padding: 66px 10px 10px 10px;
+            width: 76%;
+            float: left;
+            margin: 0 auto;
+        }
+        .count-form-inner {
+            width: 100%;
+        }
+        .coupon-wrap {
+            height: 165px;
+            width: 100%;
+            float: none;
+        }
+        .coupon-code {
+            width: 50%;
+            margin: 0 auto;
+        }
+        .proceed-wrap {
+            margin: 0 auto;
+            float: none;
+            width: 50%;
+        }
+        .proceed-payment {
+           float: right;
+        }
+        .proceed-count {
+            float: left;
+        }
+        .table-cart {
+            width: 95%;
+        }
         .menu_futer {
             width: 95%;
         }
@@ -444,18 +555,13 @@
         }
         .proceed-wrap {
             float: right;
-            width: 64%;
+            width: 50%;
         }
         .proceed-payment {
-            text-align: right;
             float: right;
-            width: 37%;
-            display: inline-block;
         }
         .proceed-count {
-            display: inline-block;
-            float: right;
-            width: 44%;
+           float: left;
         }
 
         .footer_section_active {
@@ -558,6 +664,7 @@
                 float: none;
             }
             .footer_section_box {
+                box-sizing: border-box;
                 float: none;
                 width: 80%;
                 padding: 22px 132px;
@@ -585,6 +692,9 @@
 
 
         @media all and (min-width: 320px) and (max-width: 480px) {
+            .table-cart {
+                overflow-x: scroll;
+            }
             .rightpart {
                 float: none;
             }
@@ -637,20 +747,20 @@
         }
 
 
-        @media all and (max-width: 1024px) {
+        /*@media all and (max-width: 1024px) {*/
 
-            .presentation_book {
-                float: none;
-                width: auto;
-                margin-bottom: 50px;
-            }
+            /*.presentation_book {*/
+                /*float: none;*/
+                /*width: auto;*/
+                /*margin-bottom: 50px;*/
+            /*}*/
 
-            .presentation_text {
-                border: 1px solid grey;
-                width: auto;
-            }
+            /*.presentation_text {*/
+                /*border: 1px solid grey;*/
+                /*width: auto;*/
+            /*}*/
 
-        }
+        /*}*/
 
 
         @media all and (min-width: 910px) and (max-width: 1045px) {
@@ -664,33 +774,33 @@
 
         }
 
-        @media all and (max-width: 1150px) {
-            /*.bookschoice {*/
-                /*height: 910px;*/
-                /*float: none;*/
-                /*margin: 0 auto;*/
-            /*}*/
+        /*@media all and (max-width: 1150px) {*/
+            /*!*.bookschoice {*!*/
+                /*!*height: 910px;*!*/
+                /*!*float: none;*!*/
+                /*!*margin: 0 auto;*!*/
+            /*!*}*!*/
 
-            /*.booktext {*/
-                /*margin: 0 auto;*/
-                /*height: 355px;*/
-                /*float: none;*/
-                /*width: 500px;*/
-            /*}*/
+            /*!*.booktext {*!*/
+                /*!*margin: 0 auto;*!*/
+                /*!*height: 355px;*!*/
+                /*!*float: none;*!*/
+                /*!*width: 500px;*!*/
+            /*!*}*!*/
 
-            .presentation_books {
-                margin-top: 500px;
-            }
+            /*!*.presentation_books {*!*/
+                /*!*margin-top: 500px;*!*/
+            /*!*}*!*/
 
-            .presentation_book_img {
-                right: -100px;
-            }
+            /*!*.presentation_book_img {*!*/
+                /*!*right: -100px;*!*/
+            /*!*}*!*/
 
-            /*.coupon-form {*/
-                /*float: left;*/
-                /*width: 34%;*/
-            /*}*/
-        }
+            /*!*.coupon-form {*!*/
+                /*!*float: left;*!*/
+                /*!*width: 34%;*!*/
+            /*!*}*!*/
+        /*}*/
 
         @media all and (max-width: 600px) {
             .presentation_book {
@@ -704,17 +814,17 @@
         }
         @media all and (max-width: 658px) {
 
-            .cart-wrap {
-                margin-top: 280px;
-            }
+            /*.cart-wrap {*/
+                /*margin-top: 280px;*/
+            /*}*/
 
-            .coupon-code input {
-                width: 120px;
-            }
+            /*.coupon-code input {*/
+                /*width: 120px;*/
+            /*}*/
 
-            .coupon-code {
-                width: 233px;
-            }
+            /*.coupon-code {*/
+                /*width: 233px;*/
+            /*}*/
 
             button.btn {
                 padding: 5px 5px;
@@ -741,29 +851,29 @@
             }
         }
 
-        @media all and (max-width: 600px) and (orientation: landscape) {
-            .presentation_book {
-                background-color: chocolate;
-            }
-        }
+        /*@media all and (max-width: 600px) and (orientation: landscape) {*/
+            /*.presentation_book {*/
+                /*background-color: chocolate;*/
+            /*}*/
+        /*}*/
 
-        @media only screen and (max-width: 768px) {
-            /*.form-cart {*/
-                /*padding-top: 2px;*/
+        /*@media only screen and (max-width: 768px) {*/
+            /*!*.form-cart {*!*/
+                /*!*padding-top: 2px;*!*/
+            /*!*}*!*/
+
+            /*.button.btn {*/
+                /*padding: 10px 10px;*/
             /*}*/
 
-            .button.btn {
-                padding: 10px 10px;
-            }
+            /*!*.coupon-code {*!*/
+                /*!*width: 277px;*!*/
+            /*!*}*!*/
 
-            .coupon-code {
-                width: 277px;
-            }
-
-            .coupon-code input {
-                width: 120px;
-            }
-        }
+            /*!*.coupon-code input {*!*/
+                /*!*width: 120px;*!*/
+            /*!*}*!*/
+        /*}*/
 
 
         /* при меньше 500px ) */
