--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ a:focus {
     padding: 0 100px 0 0;
 }
 .presentation_books {
-    width: 1210px;
+    /*width: 1210px;*/
     margin-right: auto;
     margin-left: auto;
 }
@@ -339,9 +339,7 @@ a:focus {
     width: 100%;
 }
 .proceed-count {
-    display: inline-block;
-    float: right;
-    width: 25%;
+    float: left;
 }
 .proceed-count table {
     float: left;
@@ -371,7 +369,6 @@ a:focus {
 .proceed-payment {
     text-align: right;
     float: right;
-    width: 35%;
     box-sizing: border-box;
     margin-top: 30px;
 }
@@ -403,41 +400,51 @@ a:focus {
 .shopfront {
     padding: 90px 0 0 0;
 }
+.shopfrontmenuleft ul li {
+    float: left;
+    list-style-type: none;
+}
+
 .shopfrontmenuleft ul li a {
+    float: left;
     list-style-type: none;
     color: #d3d9db;
     margin: 0 10px;
     padding-bottom: 10px;
 
  }
-.shopfrontmenuleft ul li :hover {
+.shopfrontmenuleft ul li a:hover {
    border-bottom: 1px solid #45474b;
    color: #45474b;
    transition: color 0.5s ease ;
-    padding-bottom: 17px;
+    padding-bottom: 10px;
 
 }
 .shopfrontmenuleft {
     float: left;
     border-bottom: 1px solid #d3d9db;
-    padding-bottom: 10px;
+    /*padding-bottom: 10px;*/
 
 }
 .shopfrontmenuright {
     padding-bottom: 10px;
     float: right;
-
 }
+.shopfrontmenuright ul li {
+    list-style-type: none;
+}
+
 .shopfrontmenuright ul li a {
     float: right;
     color: #d3d9db;
     padding-bottom: 10px;
+    border-bottom: solid 1px transparent;
 }
-.shopfrontmenuright ul li:hover {
+.shopfrontmenuright ul li a:hover {
     border-bottom: 1px solid #45474b;
     color: #45474b;
     transition: color 0.5s ease ;
-    /*padding-bottom: 10px;*/
+    padding-bottom: 10px;
 
 }
 
@@ -487,25 +494,34 @@ a:focus {
 
 }
 .literature_writes {
-    padding: 108px 20px 20px 20px;
+    padding: 45px 20px 20px 20px;
     width: 100%;
 
+}
+.literature_books {
+    padding-top: 75px;
 }
 .literature_books p {
     text-align: center;
 }
 .literature_news {
+    width: 100%;
     height: 670px;
     margin: 80px auto;
-    width: calc(100% - 33px);
+    /*width: calc(100% - 33px);*/
+}
+.literature_news h2 {
+    width: 80%;
 }
 .literature_news ul li {
+    vertical-align: top;
     display: inline-block;
-    padding: 35px 25px 10px 25px;
-    width: 342px;
-    height: 553px;
+    /*padding: 35px 25px 10px 25px;*/
+    width: 32%;
+    /*height: 553px;*/
 }
 .literature_news_autor {
+    width: 100%;
     margin: 10px 23px 140px 23px;
     float: left;
 }
@@ -514,6 +530,9 @@ a:focus {
 }
 .popularseries ul li {
     float: left;
+}
+.menupopular {
+    margin-top: 60px;
 }
 
 .menupopular hr {
@@ -531,6 +550,7 @@ a:focus {
 }
 
 .menupopular ul li {
+    float: left;
     padding: 0 0 20px 35px;
     list-style-type: none;
 }
@@ -857,7 +877,7 @@ h2 {
 
 .slider_block {
     margin: 150px auto;
-    width: 1500px;
+    width: 100%;
 
 }
 
@@ -872,6 +892,9 @@ h2 {
 .slide_block1 {
     width: 68%;
     float: left;
+}
+.slide_block1 img {
+    max-width: 100%;
 }
 .slide_block2 {
 
@@ -1483,7 +1506,7 @@ background-color: #f2fdff;;
 }
 .proceed-wrap {
     float: right;
-    width: 70%;
+    width: 45%;
 }
 .count-form-inner {
     margin: 0 auto;
@@ -1707,7 +1730,7 @@ background-color: #f2fdff;;
     height: 500px;
 }
 .slider-header-book {
-    padding-bottom: 300px;
+    padding-bottom: 150px;
 }
 /*#slider {*/
     /*margin-top: 50px;*/
