--- a/css/style.css
+++ b/css/style.css
@@ -1553,17 +1553,13 @@ background-color: #f2fdff;;
     display: none;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
-    color: #555963;
     padding: 0 0 0 10px;
 }
-.input-text.has-error{
+.has-error{
     visibility: visible;
-    /*display: inline-block;*/
-    /*position: absolute;*/
     color: red;
 }
-.input-text.has-success {
-    /*position: absolute;*/
+.has-success {
     color: darkgreen;
     border-bottom-color: darkgreen;
 }
@@ -1951,24 +1947,35 @@ background-color: #f2fdff;;
     box-shadow:0 7px 24px #8F8C8D;
     /*margin: 280px 375px 0 375px;*/
     max-width: 460px;
-    max-height: 755px;
-    position: fixed;
+    height: auto;
+    position: absolute;
     opacity: 0;
     visibility: hidden;
-    top: 100px;
+    top: 250px;
+    left: 50%;
+    transform: translate(-50%);
 }
 .inner-wrap-container {
-    max-width: 768px;
-    position: relative;
-    margin: 0 auto;
+    /*max-width: 768px;*/
+    /*position: relative;*/
+    /*margin: 0 auto;*/
     /*bottom: 6700px;*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    background: #ffffffb5;
+    width: 100%;
+    height: 100%;
+    z-index: 499;
+    overflow: auto;
 }
 .inner-wrap-login {
     margin: 75px 50px;
 }
 #wrap-login .transp-back-wrap-login {
     width: 460px;
-    height: 755px;
+    height: 100%;
     margin-top: -92px;
     margin-left: -67px;
     position: absolute;
